# swish

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
src/: client.rs  error.rs  lib.rs
tests/: lib.rs  root_cert.der
