[package]
name = "swish-api"
version = "0.1.0"
description = "API bindings for the Swish Payment API"
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/drager/swish"
documentation = "https://docs.rs/swish-api"
keywords = ["swish", "payments", "api"]
categories = ["api-bindings"]

[dependencies]
hyper = "0.12.16"
tokio-core = "0.1.17"
futures = "0.1.25"
hyper-tls = "0.3.0"
native-tls = "0.2.2"
serde = "1.0.8"
serde_json = "1.0.33"
serde_derive = "1.0.8"
